# This file contains the configuration settings for the Suno Bark project.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "suno-bark"
version = "0.0.1a"
description = "Bark text to audio model"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Suno Inc", email = "hello@suno.ai"},
]
# Apache 2.0
license = {file = "LICENSE"}

[project.urls]
source = "https://github.com/suno-ai/bark"

dependencies = [
    "boto3",
    "encodec",
    "funcy",
    "numpy",
    "scipy",
    "tokenizers",
    "torch",
    "tqdm",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "codecov",
    "flake8",
    "huggingface-hub",
    "hypothesis>=6.14,<7",
    "isort>=5.0.0,<6",
    "jupyter",
    "mypy",
    "nbconvert",
    "nbformat",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["bark"]

[tool.setuptools.package-data]
bark = ["assets/prompts/*.npz"]

# Black code formatter settings
[tool.black]
line-length = 100
